--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~46.0.9",
+    "expo-font": "^10.2.0",
     "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-native": "0.69.4"
+    "expo-updates": "^0.14.5",
+    "react": "^18.0.0",
+    "react-native": "0.69.4",
+    "react-native-gesture-handler": "^2.5.0",
+    "react-native-safe-area-context": "4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
