--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "expo-status-bar": "~1.4.0",
     "expo-updates": "^0.14.5",
     "react": "^18.0.0",
-    "react-native": "0.69.4",
+    "react-native": "^0.69.4",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-safe-area-context": "4.3.1"
   },
